feat: Implement comprehensive Chinese CV generation and optimization plans
- Added detailed plan for generating a Chinese CV (chinese_cv_plan.md) with color configurations, content structure, and technical implementation.
- Created layout optimization plan (cv_chinese_layout_optimization_plan.md) addressing current issues and proposing a phased approach for improvements.
- Developed rework plan (cv_chinese_rework_plan.md) to streamline the CV into a concise 2-page format, emphasizing key research areas and invited talks.
- Established transformation plan (cv_transformation_plan.md) to update personal information, restructure content, and enhance academic style.
- Formulated a bug fix plan (latex_bug_fix_plan.md) to address LaTeX compilation errors, focusing on font issues and xeCJK package conflicts.

--- a/cv/cv_chinese.tex
+++ b/cv/cv_chinese.tex
@@ -29,9 +29,9 @@
 \usepackage{xeCJK}
 
 % 使用系统可用的中文字体，最简配置避免字体不存在错误
-% \setCJKmainfont{Noto Sans CJK SC}
-% \setCJKsansfont{Noto Sans CJK SC}
-% \setCJKmonofont{Noto Sans Mono CJK SC}
+\setCJKmainfont{Noto Sans CJK SC}
+\setCJKsansfont{Noto Sans CJK SC}
+\setCJKmonofont{Noto Sans Mono CJK SC}
 
 % xeCJK基础配置，避免复杂特性冲突
 \xeCJKsetup{
@@ -101,13 +101,13 @@
         \vspace{.3cm} \\
         清华大学机械工程博士研究生 \\
         智能监测诊断技术 \\
-        \textbf{总被引用：500+}
+        \textbf{总被引用：700+}
         \\
         % 头像
-        \IfFileExists{../images/LQ.png}{
+        \IfFileExists{portrait_template.jpg}{
         \begin{center}
             \begin{tikzpicture}
-            \clip (0,0) circle (3cm) node[anchor=center] {\includegraphics[width=6cm]{../images/LQ.png}}; 
+            \clip (0,0) circle (3cm) node[anchor=center] {\includegraphics[width=6cm]{portrait_template.jpg}}; 
             \end{tikzpicture}
         \end{center}
         }{}
@@ -177,58 +177,51 @@
     \begin{minipage}[t][\dimexpr\textheight-2\fboxrule-2\fboxsep\relax][t]{\dimexpr0.6\textwidth-2\fboxrule-2\fboxsep\relax}
         \color{maintext}
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        % 研究经历
+        \phantomsection{}
+        \addcontentsline{toc}{section}{研究经历}
+        \section*{\scshape\Large 研究经历 \rule{\linewidth}{0.4pt}}
+%
+        {\large \textbf{耶鲁大学统计与数据科学系}} \\ 
+        {{\fontseries{medium}\selectfont 访问学者}} \\
+        {\scshape\fontseries{light}\selectfont\footnotesize 2025年4月 \textendash{} 2025年9月} 
+        \begin{itemize}
+            \setlength{\itemsep}{-3pt}
+            \item 导师：Lu Lu 教授 | 研究方向：物理信息神经网络、基础模型研究
+        \end{itemize}
+%
+        {\large \textbf{清华大学人工智能研究院}} \\
+        {{\fontseries{medium}\selectfont 研究实习生}} \\
+        {\scshape\fontseries{light}\selectfont\footnotesize 2022年4月 \textendash{} 2022年9月} 
+        \begin{itemize}
+            \setlength{\itemsep}{-3pt}
+            \item 导师：李远春 教授 | AI时间序列分析、工业应用机器学习算法
+        \end{itemize}
+%
+        {\large \textbf{清华大学机械工程系}} \\
+        {{\fontseries{medium}\selectfont 博士研究助理}} \\
+        {\scshape\fontseries{light}\selectfont\footnotesize 2022年9月 \textendash{} 至今} 
+        \begin{itemize}
+            \setlength{\itemsep}{-3pt}
+            \item 导师：秦朝烨 教授 | 可信AI与基础模型研究、主导8+篇JCR Q1期刊论文
+        \end{itemize}
+%
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
         % 学习经历
         \phantomsection{}
         \addcontentsline{toc}{section}{学习经历}
         \section*{\scshape\Large 学习经历 \rule{\linewidth}{0.4pt}}
 %
-        {\large \textbf{清华大学}} \\ 
-        {{\fontseries{medium}\selectfont 机械工程博士}} \\
-        {\scshape\fontseries{light}\selectfont\footnotesize 2022年9月 \textendash{} 2026年6月} 
-        \begin{itemize}
-            \setlength{\itemsep}{-3pt}
-            \item 导师：秦朝烨 教授
-            \item 专业方向：智能监测诊断技术
-            \item 学术成果：5篇代表性论文，500+总被引用
-            \item 获奖情况：未来学者奖学金、青年托举人才
-        \end{itemize}
+        {\large \textbf{📚 博士研究 (2022-2026)}} \\
+        {{\fontseries{medium}\selectfont 清华大学 机械工程博士 | 导师: 秦朝烨教授}} \\
+        {\scshape\fontseries{light}\selectfont\footnotesize 研究方向: 可信AI、基础模型、故障诊断 | 学术成果: 8+篇JCR Q1论文，700+引用} \\[1ex]
 %
-        {\large \textbf{耶鲁大学}} \\
-        {{\fontseries{medium}\selectfont 访问学者，数据科学与统计系}} \\
-        {\scshape\fontseries{light}\selectfont\footnotesize 2025年4月 \textendash{} 2025年9月} 
-        \begin{itemize}
-            \setlength{\itemsep}{-3pt}
-            \item 导师：Lu Lu 教授
-            \item 研究方向：物理信息神经网络
-            \item 基础模型研究
-            \item 国际学术合作与交流
-        \end{itemize}
+        {\large \textbf{📚 硕士研究 (2019-2022)}} \\
+        {{\fontseries{medium}\selectfont 苏州大学 控制理论与控制工程硕士 | 导师: 陈亮、沈长青教授}} \\
+        {\scshape\fontseries{light}\selectfont\footnotesize 研究重点: 故障诊断域适应方法 | 3篇ESI高被引论文 | 优秀毕业生、国家奖学金} \\[1ex]
 %
-        {\large \textbf{苏州大学}} \\
-        {{\fontseries{medium}\selectfont 控制理论与控制工程硕士}} \\
-        {\scshape\fontseries{light}\selectfont\footnotesize 2019年9月 \textendash{} 2022年6月} 
-        \begin{itemize}
-            \setlength{\itemsep}{-3pt}
-            \item 导师：陈亮 教授、沈长青 教授
-            \item 研究重点：故障诊断的域适应方法
-            \item 荣誉：江苏省优秀毕业生、优秀学术硕士毕业论文
-            \item 成果：3篇ESI高被引论文
-        \end{itemize}
-%
-        {\large \textbf{苏州大学}}\\
-        {{\fontseries{medium}\selectfont 电气工程及其自动化学士}}\\
-        {\scshape\fontseries{light}\selectfont\footnotesize 2015年9月 \textendash{} 2019年6月} 
-        \begin{itemize}
-            \setlength{\itemsep}{-4pt}
-            \item 荣誉：优秀毕业生
-            \item 特殊经历：开学典礼新生代表发言
-            \item 基础：电气系统与控制工程扎实基础
-        \end{itemize}
-%
-        {\large \textbf{瑞安市第十中学}}\\
-        {{\fontseries{medium}\selectfont 高中}}\\
-        {\scshape\fontseries{light}\selectfont\footnotesize 2012年9月 \textendash{} 2015年6月} 
-        % \\
+        {\large \textbf{📚 本科学习 (2015-2019)}} \\
+        {{\fontseries{medium}\selectfont 苏州大学 电气工程及其自动化学士 | 优秀毕业生、开学典礼研究生代表发言}} \\
         \vfill%
         {\hfill\small\fontseries{extralight}\selectfont 第 \thepage 页，共 \pageref{LastPage} 页\hfill}
     \end{minipage}
@@ -242,31 +235,50 @@
         \color{maintext}
         % \vspace{.6cm}
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-        % 代表性学术论文
+        % 代表性研究介绍
         \phantomsection
-        \addcontentsline{toc}{section}{代表性论文}
-        \section*{\scshape\Large 代表性学术论文 \rule{\linewidth}{0.4pt}}
+        \addcontentsline{toc}{section}{代表性研究}
+        \section*{\scshape\Large 代表性研究 \rule{\linewidth}{0.4pt}}
+        \setlength{\parindent}{0pt}
+        
+        \textbf{🔖 PHM Foundation Model} \\
+        \textit{提出即插即用模块实现统一故障诊断基础模型架构} \\
+        • HSE: 用于统一故障诊断的即插即用模块 \textit{(Information Fusion 2025, IF=14.4)} \\[1ex]
+
+        \textbf{🔖 Neural-Symbolic Diagnosis} \\  
+        \textit{融合神经网络与符号推理，构建可解释的故障诊断方法} \\
+        • 透明信息融合网络 \textit{(ADVEI 2025, IF=8.0)} \\
+        • 深度专家网络 \textit{(JMS 2024, IF=12.2)} \\
+        • 透明算子网络 \textit{(IEEE TII 2024, IF=12.3)} \\[1ex]
+
+        \textbf{🔖 Cross-Domain Diagnosis} \\
+        \textit{开发域适应与泛化方法，解决跨工况故障诊断难题} \\
+        • 跨域增强诊断 \textit{(RESS 2023, IF=9.4, 高被引🌟)} \\
+        • 对抗域不变泛化 \textit{(IEEE TII 2022, IF=11.7, 高被引🌟)} \\
+        • 知识映射对抗域适应 \textit{(MSSP 2021, IF=7.9, 高被引🌟)} \\[2ex]
+        
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        % 完整论文引文列表
+        \phantomsection
+        \addcontentsline{toc}{section}{学术论文}
+        \section*{\scshape\Large 学术论文 \rule{\linewidth}{0.4pt}}
         \begin{justify}
         \setlength{\parindent}{0pt}
-        {\large \textbf{深度专家网络研究}} \\
-        {\scshape\fontseries{light}\selectfont\footnotesize JMS 2024 \qquad IF: 12.2, 中科院一区TOP} \\
-        \textbf{Q. Li}, Y. Liu, S. Sun, Z. Qin, and F. Chu, "Deep expert network: A unified method toward knowledge-informed fault diagnosis via fully interpretable neuro-symbolic AI," J. Manuf. Syst., vol. 77, pp. 652–661, Dec. 2024.\\[1ex]
-
-        {\large \textbf{透明算子网络研究}} \\
-        {\scshape\fontseries{light}\selectfont\footnotesize IEEE TII 2024 \qquad IF: 11.7, 中科院一区TOP} \\
-        \textbf{Q. Li}, H. Li, W. Hu, S. Sun, Z. Qin, and F. Chu, "Transparent Operator Network: A Fully Interpretable Network Incorporating Learnable Wavelet Operator for Intelligent Fault Diagnosis," IEEE Trans. Ind. Inf., 2024. \\[1ex]
-
-        {\large \textbf{跨域增强诊断方法}} \\
-        {\scshape\fontseries{light}\selectfont\footnotesize RESS 2023 \qquad IF: 9.4, ESI高被引, 被引51次} \\
-        \textbf{Q. Li}, L. Chen, L. Kong, D. Wang, M. Xia, and C. Shen, "Cross-domain augmentation diagnosis: An adversarial domain-augmented generalization method for fault diagnosis under unseen working conditions," Reliab Eng Syst Saf, vol. 234, 2023. \\[1ex]
+        \footnotesize
         
-        {\large \textbf{对抗域不变泛化框架}} \\
-        {\scshape\fontseries{light}\selectfont\footnotesize IEEE TII 2022 \qquad IF: 11.7, ESI高被引, 被引135次} \\
-        L. Chen (导师), \textbf{Q. Li}, C. Shen et al. "Adversarial domain-invariant generalization: a generic domain-regressive framework for bearing fault diagnosis under unseen conditions," IEEE Trans. Ind. Informatics, 2021. \\[1ex]
+        [1] \textbf{Q. Li}, Y. Liu, S. Sun, Z. Qin, and F. Chu, "Deep expert network: A unified method toward knowledge-informed fault diagnosis via fully interpretable neuro-symbolic AI," \textit{J. Manuf. Syst.}, vol. 77, pp. 652–661, Dec. 2024. (中科院一区TOP，IF: 12.2) \\[0.5ex]
 
-        {\large \textbf{知识映射对抗域适应}} \\
-        {\scshape\fontseries{light}\selectfont\footnotesize MSSP 2021 \qquad IF: 8.6, ESI高被引, 被引130次} \\
-        \textbf{Q. Li}, C. Shen, L. Chen, et al. "Knowledge mapping-based adversarial domain adaptation: A novel fault diagnosis method with high generalizability under variable working conditions," Mech. Syst. Signal Process., vol. 147, 2021. \\[1ex]
+        [2] \textbf{Q. Li}, H. Li, W. Hu, S. Sun, Z. Qin, and F. Chu, "Transparent Operator Network: A Fully Interpretable Network Incorporating Learnable Wavelet Operator for Intelligent Fault Diagnosis," \textit{IEEE Trans. Ind. Inf.}, 2024. (中科院一区TOP, IF: 12.3) \\[0.5ex]
+
+        [3] \textbf{Q. Li}, L. Chen, L. Kong, D. Wang, M. Xia, and C. Shen, "Cross-domain augmentation diagnosis: An adversarial domain-augmented generalization method for fault diagnosis under unseen working conditions," \textit{Reliab Eng Syst Saf}, vol. 234, p. 109171, 2023. (中科院一区TOP, IF: 9.4, ESI高被引，被引51次) \\[0.5ex]
+
+        [4] L. Chen (导师), \textbf{Q. Li}, C. Shen et al. "Adversarial domain-invariant generalization: a generic domain-regressive framework for bearing fault diagnosis under unseen conditions," \textit{IEEE Trans. Ind. Informatics}, 2021. (中科院一区TOP, IF: 11.7, ESI高被引，被引135次) \\[0.5ex]
+
+        [5] \textbf{Q. Li}, C. Shen, L. Chen, et al. "Knowledge mapping-based adversarial domain adaptation: A novel fault diagnosis method with high generalizability under variable working conditions," \textit{Mech. Syst. Signal Process.}, vol. 147, 2021. (中科院一区TOP, IF: 8.6, ESI高被引，被引130次) \\[0.5ex]
+
+        [6] \textbf{Q. Li}, B. Chen, Q. Chen, X. Li, Z. Qin, and F. Chu, "HSE: A Plug-and-Play Module for Unified Fault Diagnosis Foundation Models," \textit{Information Fusion}, 2025. (JCR Q1, IF: 14.4) \\[0.5ex]
+
+        [7] \textbf{Q. Li}, L. Qin, H. Xu, Q. Lin, Z. Qin, and F. Chu, "Transparent information fusion network: An explainable network for multi-source bearing fault diagnosis via self-organized neural-symbolic nodes," \textit{Advanced Engineering Informatics}, 2025. (JCR Q1, IF: 8.0)
         \end{justify}
         \vfill%
         {\hfill\small\fontseries{extralight}\selectfont 第 \thepage 页，共 \pageref{LastPage} 页\hfill}
@@ -299,6 +311,22 @@
             2021 & 校优秀研究生 \\
             2021 & 国家奖学金 \\
             2020 & 国家奖学金 \\
+        \end{tabularx}
+        \vspace{.3cm}
+        \\
+        \rule{\linewidth}{0.4pt}
+        \\
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        % 受邀学术报告
+        \phantomsection
+        \addcontentsline{toc}{section}{受邀学术报告}
+        \section*{\large 🎤 受邀学术报告}
+        \begin{tabularx}{\textwidth}{cY}
+            2024.04 & 北京AI博士生论坛，北京（观众2万人） \\
+            2023.11 & PHM学术会议，杭州 \\
+            2023.04 & 清华大学机械工程系博士生论坛 \\
+            2020.07 & IEEE INDIN 2020，英国华威（线上） \\
+            2018.07 & SDPC 2018，西安 \\
         \end{tabularx}
         \vspace{.3cm}
         \\
