feat: 更新中文简历和个人主页，合并教育与研究经历，修正信息并添加二维码

--- a/cv/cv_chinese.tex
+++ b/cv/cv_chinese.tex
@@ -222,7 +222,7 @@
 %
         {\large \textbf{📚 本科学习 (2015-2019)}} \\
         {{\fontseries{medium}\selectfont 苏州大学 电气工程及其自动化学士 | 优秀毕业生、开学典礼研究生代表发言}} \\
-        \vfill%
+        % \vfill%
         {\hfill\small\fontseries{extralight}\selectfont 第 \thepage 页，共 \pageref{LastPage} 页\hfill}
     \end{minipage}
 }%
@@ -280,7 +280,7 @@
 
         [7] \textbf{Q. Li}, L. Qin, H. Xu, Q. Lin, Z. Qin, and F. Chu, "Transparent information fusion network: An explainable network for multi-source bearing fault diagnosis via self-organized neural-symbolic nodes," \textit{Advanced Engineering Informatics}, 2025. (JCR Q1, IF: 8.0)
         \end{justify}
-        \vfill%
+        % \vfill%
         {\hfill\small\fontseries{extralight}\selectfont 第 \thepage 页，共 \pageref{LastPage} 页\hfill}
     \end{minipage}
 }
