--- a/cv/cv_chinese_backup.tex
+++ b/cv/cv_chinese_backup.tex
@@ -104,23 +104,13 @@
         \textbf{总被引用：700+}
         \\
         % 头像
-        \IfFileExists{portait.jpg}{
+        \IfFileExists{portrait_template.jpg}{
         \begin{center}
             \begin{tikzpicture}
-            \clip (0,0) circle (3cm) node[anchor=center] {\includegraphics[width=6cm]{portait.jpg}}; 
+            \clip (0,0) circle (3cm) node[anchor=center] {\includegraphics[width=6cm]{portrait_template.jpg}}; 
             \end{tikzpicture}
         \end{center}
         }{}
-        \vspace{.3cm}
-        % 添加个人主页二维码
-        \begin{center}
-            \textbf{\small 个人主页}\\
-            \vspace{.2cm}
-            \IfFileExists{QRcode.png}{
-                \includegraphics[width=2.5cm]{QRcode.png}
-            }{}\\
-            {\tiny 扫码访问主页}
-        \end{center}
         \vspace{.3cm}
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
         % 个人基本信息
@@ -142,7 +132,7 @@
         % 研究领域
         \phantomsection{}
         \addcontentsline{toc}{section}{研究领域}
-        \section*{\large 🧠 研究领域}
+        \section*{\large 研究领域}
         \begin{tabular}{cl}
             \faBrain{}      & 可信人工智能 \\
             \faCogs{}       & 基础模型 \\
@@ -154,7 +144,7 @@
         % 核心技能
         \phantomsection{}
         \addcontentsline{toc}{section}{核心技能}
-        \section*{\large 💻 核心技能}
+        \section*{\large 核心技能}
         \begin{tabularx}{\textwidth}{cY}
             \faCode{}        & Python, MATLAB, PyTorch \\
             \faPen*{}        & TensorFlow, Scikit-learn \\
@@ -169,14 +159,14 @@
         % 主要荣誉
         \phantomsection{}
         \addcontentsline{toc}{section}{主要荣誉}
-        \section*{\large 🏆 主要荣誉}
+        \section*{\large 主要荣誉}
         \begin{tabularx}{\textwidth}{cY}
-            \faTrophy{} 2024 & 首批科协青年托举人才（博士） \\
-            \faAward{} 2024 & 振动工程协会科学技术二等奖 \\
-            \faMedal{} 2023 & 清华大学社会实践奖学金 \\
-            \faStar{} 2022 & 清华大学未来学者奖学金 \\
-            \faCrown{} 2021 & 国家奖学金 \\
-            \faCrown{} 2020 & 国家奖学金 \\
+            2024 & 首批科协青年托举人才（博士） \\
+            2024 & 振动工程协会科学技术二等奖 \\
+            2023 & 清华大学社会实践奖学金 \\
+            2022 & 清华大学未来学者奖学金 \\
+            2021 & 国家奖学金 \\
+            2020 & 国家奖学金 \\
         \end{tabularx}
         \vspace{.3cm}
         \vfill
@@ -187,34 +177,51 @@
     \begin{minipage}[t][\dimexpr\textheight-2\fboxrule-2\fboxsep\relax][t]{\dimexpr0.6\textwidth-2\fboxrule-2\fboxsep\relax}
         \color{maintext}
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-        % 🎓 教育与研究经历
+        % 研究经历
         \phantomsection{}
-        \addcontentsline{toc}{section}{教育与研究经历}
-        \section*{\scshape\Large 教育与研究经历 \rule{\linewidth}{0.4pt}}
-
-        % 🔬 当前博士阶段（2022-至今）
-        {\large \textbf{博士研究阶段 (2022年9月-至今)}} \\
-        {{\fontseries{medium}\selectfont \faUniversity{} 清华大学 机械工程博士}} \\
-        {\scshape\fontseries{light}\selectfont\footnotesize 导师: 秦朝烨教授 | 研究方向: 可信AI、基础模型、故障诊断} \\
-        {\scshape\fontseries{light}\selectfont\footnotesize 学术成果: 8+篇JCR Q1论文，700+引用 | 未来学者奖学金} \\[1ex]
-
-        % 📚 访问学者经历
-        {\large \textbf{访问学者经历}} \\
-        • \faGlobe{} \textbf{耶鲁大学统计与数据科学系} (2025年4月-2025年9月) \\
-          导师：Lu Lu 教授 | 研究：物理信息神经网络、基础模型 \\[0.5ex]
-        • \faFlask{} \textbf{清华大学人工智能研究院} (2022年4月-2022年9月) \\
-          导师：李远春 教授 | 研究：AI时间序列分析、工业机器学习 \\[1ex]
-
-        % 🎓 硕士研究阶段（2019-2022）
-        {\large \textbf{硕士研究阶段 (2019年9月-2022年6月)}} \\
-        {{\fontseries{medium}\selectfont \faUniversity{} 苏州大学 控制理论与控制工程硕士}} \\
-        {\scshape\fontseries{light}\selectfont\footnotesize 导师: 陈良教授、沈长青教授 | 研究重点: 故障诊断域适应方法} \\
-        {\scshape\fontseries{light}\selectfont\footnotesize 成果: 3篇ESI高被引论文 | 优秀毕业生 | 国家奖学金} \\[1ex]
-
-        % 🎓 本科学习阶段（2015-2019）
-        {\large \textbf{本科学习阶段 (2015年9月-2019年6月)}} \\
-        {{\fontseries{medium}\selectfont \faUniversity{} 苏州大学 电气工程及其自动化学士}} \\
-        {\scshape\fontseries{light}\selectfont\footnotesize 优秀毕业生 | 开学典礼新生代表发言人} \\[2ex]
+        \addcontentsline{toc}{section}{研究经历}
+        \section*{\scshape\Large 研究经历 \rule{\linewidth}{0.4pt}}
+%
+        {\large \textbf{耶鲁大学统计与数据科学系}} \\ 
+        {{\fontseries{medium}\selectfont 访问学者}} \\
+        {\scshape\fontseries{light}\selectfont\footnotesize 2025年4月 \textendash{} 2025年9月} 
+        \begin{itemize}
+            \setlength{\itemsep}{-3pt}
+            \item 导师：Lu Lu 教授 | 研究方向：物理信息神经网络、基础模型研究
+        \end{itemize}
+%
+        {\large \textbf{清华大学人工智能研究院}} \\
+        {{\fontseries{medium}\selectfont 研究实习生}} \\
+        {\scshape\fontseries{light}\selectfont\footnotesize 2022年4月 \textendash{} 2022年9月} 
+        \begin{itemize}
+            \setlength{\itemsep}{-3pt}
+            \item 导师：李远春 教授 | AI时间序列分析、工业应用机器学习算法
+        \end{itemize}
+%
+        {\large \textbf{清华大学机械工程系}} \\
+        {{\fontseries{medium}\selectfont 博士研究助理}} \\
+        {\scshape\fontseries{light}\selectfont\footnotesize 2022年9月 \textendash{} 至今} 
+        \begin{itemize}
+            \setlength{\itemsep}{-3pt}
+            \item 导师：秦朝烨 教授 | 可信AI与基础模型研究、主导8+篇JCR Q1期刊论文
+        \end{itemize}
+%
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        % 学习经历
+        \phantomsection{}
+        \addcontentsline{toc}{section}{学习经历}
+        \section*{\scshape\Large 学习经历 \rule{\linewidth}{0.4pt}}
+%
+        {\large \textbf{📚 博士研究 (2022-2026)}} \\
+        {{\fontseries{medium}\selectfont 清华大学 机械工程博士 | 导师: 秦朝烨教授}} \\
+        {\scshape\fontseries{light}\selectfont\footnotesize 研究方向: 可信AI、基础模型、故障诊断 | 学术成果: 8+篇JCR Q1论文，700+引用} \\[1ex]
+%
+        {\large \textbf{📚 硕士研究 (2019-2022)}} \\
+        {{\fontseries{medium}\selectfont 苏州大学 控制理论与控制工程硕士 | 导师: 陈亮、沈长青教授}} \\
+        {\scshape\fontseries{light}\selectfont\footnotesize 研究重点: 故障诊断域适应方法 | 3篇ESI高被引论文 | 优秀毕业生、国家奖学金} \\[1ex]
+%
+        {\large \textbf{📚 本科学习 (2015-2019)}} \\
+        {{\fontseries{medium}\selectfont 苏州大学 电气工程及其自动化学士 | 优秀毕业生、开学典礼研究生代表发言}} \\
         % \vfill%
         {\hfill\small\fontseries{extralight}\selectfont 第 \thepage 页，共 \pageref{LastPage} 页\hfill}
     \end{minipage}
@@ -259,22 +266,19 @@
         \setlength{\parindent}{0pt}
         \footnotesize
         
-        % 2025年最新成果
-        [1] \textbf{Q. Li}, B. Chen, Q. Chen, X. Li, Z. Qin, and F. Chu, "HSE: A Plug-and-Play Module for Unified Fault Diagnosis Foundation Models," \textit{Information Fusion}, 2025. (中科院一区TOP，IF: 14.4) \\[0.5ex]
+        [1] \textbf{Q. Li}, Y. Liu, S. Sun, Z. Qin, and F. Chu, "Deep expert network: A unified method toward knowledge-informed fault diagnosis via fully interpretable neuro-symbolic AI," \textit{J. Manuf. Syst.}, vol. 77, pp. 652–661, Dec. 2024. (中科院一区TOP，IF: 12.2) \\[0.5ex]
 
-        [2] \textbf{Q. Li}, L. Qin, H. Xu, Q. Lin, Z. Qin, and F. Chu, "Transparent information fusion network: An explainable network for multi-source bearing fault diagnosis via self-organized neural-symbolic nodes," \textit{Advanced Engineering Informatics}, 2025. (JCR Q1, IF: 8.0) \\[0.5ex]
+        [2] \textbf{Q. Li}, H. Li, W. Hu, S. Sun, Z. Qin, and F. Chu, "Transparent Operator Network: A Fully Interpretable Network Incorporating Learnable Wavelet Operator for Intelligent Fault Diagnosis," \textit{IEEE Trans. Ind. Inf.}, 2024. (中科院一区TOP, IF: 12.3) \\[0.5ex]
 
-        % 2024年核心成果  
-        [3] \textbf{Q. Li}, Y. Liu, S. Sun, Z. Qin, and F. Chu, "Deep expert network: A unified method toward knowledge-informed fault diagnosis via fully interpretable neuro-symbolic AI," \textit{J. Manuf. Syst.}, vol. 77, pp. 652–661, Dec. 2024. (中科院一区TOP，IF: 12.2) \\[0.5ex]
+        [3] \textbf{Q. Li}, L. Chen, L. Kong, D. Wang, M. Xia, and C. Shen, "Cross-domain augmentation diagnosis: An adversarial domain-augmented generalization method for fault diagnosis under unseen working conditions," \textit{Reliab Eng Syst Saf}, vol. 234, p. 109171, 2023. (中科院一区TOP, IF: 9.4, ESI高被引，被引51次) \\[0.5ex]
 
-        [4] \textbf{Q. Li}, H. Li, W. Hu, S. Sun, Z. Qin, and F. Chu, "Transparent Operator Network: A Fully Interpretable Network Incorporating Learnable Wavelet Operator for Intelligent Fault Diagnosis," \textit{IEEE Trans. Ind. Inf.}, 2024. (中科院一区TOP, IF: 12.3) \\[0.5ex]
+        [4] L. Chen (导师), \textbf{Q. Li}, C. Shen et al. "Adversarial domain-invariant generalization: a generic domain-regressive framework for bearing fault diagnosis under unseen conditions," \textit{IEEE Trans. Ind. Informatics}, 2021. (中科院一区TOP, IF: 11.7, ESI高被引，被引135次) \\[0.5ex]
 
-        % 高被引重点论文
-        [5] \textbf{Q. Li}, L. Chen, L. Kong, D. Wang, M. Xia, and C. Shen, "Cross-domain augmentation diagnosis: An adversarial domain-augmented generalization method for fault diagnosis under unseen working conditions," \textit{Reliab Eng Syst Saf}, vol. 234, p. 109171, 2023. (中科院一区TOP, IF: 9.4, ESI高被引🌟，被引51次) \\[0.5ex]
+        [5] \textbf{Q. Li}, C. Shen, L. Chen, et al. "Knowledge mapping-based adversarial domain adaptation: A novel fault diagnosis method with high generalizability under variable working conditions," \textit{Mech. Syst. Signal Process.}, vol. 147, 2021. (中科院一区TOP, IF: 8.6, ESI高被引，被引130次) \\[0.5ex]
 
-        [6] 陈良 (导师), \textbf{Q. Li}, C. Shen et al. "Adversarial domain-invariant generalization: a generic domain-regressive framework for bearing fault diagnosis under unseen conditions," \textit{IEEE Trans. Ind. Informatics}, 2021. (中科院一区TOP, IF: 11.7, ESI高被引🌟，被引135次) \\[0.5ex]
+        [6] \textbf{Q. Li}, B. Chen, Q. Chen, X. Li, Z. Qin, and F. Chu, "HSE: A Plug-and-Play Module for Unified Fault Diagnosis Foundation Models," \textit{Information Fusion}, 2025. (JCR Q1, IF: 14.4) \\[0.5ex]
 
-        [7] \textbf{Q. Li}, C. Shen, 陈良, et al. "Knowledge mapping-based adversarial domain adaptation: A novel fault diagnosis method with high generalizability under variable working conditions," \textit{Mech. Syst. Signal Process.}, vol. 147, 2021. (中科院一区TOP, IF: 8.6, ESI高被引🌟，被引130次) \\[0.5ex]
+        [7] \textbf{Q. Li}, L. Qin, H. Xu, Q. Lin, Z. Qin, and F. Chu, "Transparent information fusion network: An explainable network for multi-source bearing fault diagnosis via self-organized neural-symbolic nodes," \textit{Advanced Engineering Informatics}, 2025. (JCR Q1, IF: 8.0)
         \end{justify}
         % \vfill%
         {\hfill\small\fontseries{extralight}\selectfont 第 \thepage 页，共 \pageref{LastPage} 页\hfill}
@@ -318,11 +322,11 @@
         \addcontentsline{toc}{section}{受邀学术报告}
         \section*{\large 🎤 受邀学术报告}
         \begin{tabularx}{\textwidth}{cY}
-            \faMicrophone{} 2024.04 & 北京AI博士生论坛，北京（观众2万人） \\
-            \faDesktop{} 2023.11 & PHM学术会议，杭州 \\
-            \faUniversity{} 2023.04 & 清华大学机械工程系博士生论坛 \\
-            \faGlobe{} 2020.07 & IEEE INDIN 2020，英国华威（线上） \\
-            \faMapMarker{} 2018.07 & SDPC 2018，西安 \\
+            2024.04 & 北京AI博士生论坛，北京（观众2万人） \\
+            2023.11 & PHM学术会议，杭州 \\
+            2023.04 & 清华大学机械工程系博士生论坛 \\
+            2020.07 & IEEE INDIN 2020，英国华威（线上） \\
+            2018.07 & SDPC 2018，西安 \\
         \end{tabularx}
         \vspace{.3cm}
         \\
@@ -332,7 +336,7 @@
         % 学术服务
         \phantomsection
         \addcontentsline{toc}{section}{学术服务}
-        \section*{\large 📝 学术服务}
+        \section*{\large 学术服务}
         \begin{tabularx}{\textwidth}{cY}
             \faJournalWhills{} & Information Fusion \\
             \faJournalWhills{} & IEEE TII, MSSP \\
@@ -348,7 +352,7 @@
         % 项目应用
         \phantomsection
         \addcontentsline{toc}{section}{项目应用}
-        \section*{\large 🚀 项目应用}
+        \section*{\large 项目应用}
         \begin{tabularx}{\textwidth}{cY}
             \faPlane{}      & 某型号飞机减振降噪分析 \\
             \faBolt{}       & 水电站智能运维技术 \\
@@ -362,7 +366,7 @@
         % 社会活动
         \phantomsection
         \addcontentsline{toc}{section}{社会活动}
-        \section*{\large 🤝 社会活动}
+        \section*{\large 社会活动}
         \begin{tabularx}{\textwidth}{cY}
             \faMicrophone{}  & 苏大开学典礼新生代表发言 \\
             \faUserTie{}     & 苏大机电学院研究生班长 \\
