--- a/cv/cv_english_backup.tex
+++ b/cv/cv_english_backup.tex
@@ -117,10 +117,10 @@
         \textbf{600+ Citations} 
         \\
         % Include photo only if the file exists to avoid fatal errors
-        \IfFileExists{portait.jpg}{
+        \IfFileExists{../images/LQ.png}{
         \begin{center}
             \begin{tikzpicture}
-            \clip (0,0) circle (3cm) node[anchor=center] {\includegraphics[width=6cm]{portait.jpg}}; 
+            \clip (0,0) circle (3cm) node[anchor=center] {\includegraphics[width=6cm]{../images/LQ.png}}; 
             \end{tikzpicture}
         \end{center}
         }{}
@@ -157,7 +157,7 @@
         % Add/Remove as seen fit, Icons: https://packages.oth-regensburg.de/ctan/fonts/fontawesome5/doc/fontawesome5.pdf
         \phantomsection{}
         \addcontentsline{toc}{section}{Skills}
-        \section*{\large 🔬 Research \& Skills}
+        \section*{\large Research \& Skills}
         \begin{tabularx}{\textwidth}{cY}
             \faBrain{}       & Trustworthy AI, Foundation Models, Reliable PHM \\
             \faCode{}        & Python, MATLAB, PyTorch, TensorFlow, Scikit-learn \\
@@ -244,7 +244,7 @@
 
         {\large \textbf{M.Eng. Control Theory and Control Engineering, Soochow University\\ (Master's Degree)}} \\
         {\scshape\fontseries{light}\selectfont\footnotesize Suzhou \qquad Sep 2019 \textendash{} Jun 2022} \\
-        {Supervisors: Prof. Chen Liang \& Prof. Changqing Shen} \\[1ex]
+        {Supervisors: Prof. Liang Chen \& Prof. Changqing Shen} \\[1ex]
         {Outstanding Graduate, National Scholarship recipient} \\
         {Research: Domain adaptation for fault diagnosis} \\[1ex]
         {\footnotesize Published 3 highly-cited papers in top-tier journals} \\[2ex]
